# mp3packercpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  test.yml
src/cli/: main.cpp
src/core/: bitstream.hpp  crc.cpp  huffman.cpp  huffman.hpp  huffman_tables.hpp  logger.hpp  mp3_reader.cpp  mp3_reader.hpp  packer.cpp  packer.hpp  types.hpp
src/core/include/: bitstream.hpp  crc.hpp  huffman.hpp  huffman_tables.hpp  logger.hpp  mp3_reader.hpp  packer.hpp  types.hpp
